@startuml

title __PERSONNAGES's Class Diagram__\n

  namespace com.projet_warriors {
    namespace personnages {
      class com.projet_warriors.personnages.Guerrier {
          - bouclier : String
          + Guerrier()
          + Guerrier()
          + Guerrier()
          + getArme()
          + getBouclier()
          + setArme()
          + setBouclier()
          + toString()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace personnages {
      class com.projet_warriors.personnages.Magicien {
          - philtre : String
          + Magicien()
          + Magicien()
          + Magicien()
          + getPhiltre()
          + getSort()
          + setPhiltre()
          + setSort()
          + toString()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace personnages {
      abstract class com.projet_warriors.personnages.Personnage {
          - force : int
          - maxForce : int
          - maxVie : int
          - nom : String
          - vie : int
          + Personnage()
          + Personnage()
          + Personnage()
          + addForce()
          + addVie()
          + getForce()
          + getNom()
          + getVie()
          + setForce()
          + setNom()
          + setVie()
          + toString()
      }
    }
  }
  

  com.projet_warriors.personnages.Guerrier -up-|> com.projet_warriors.personnages.Personnage
  com.projet_warriors.personnages.Guerrier o-- com.projet_warriors.armes.Arme : arme
  com.projet_warriors.personnages.Magicien -up-|> com.projet_warriors.personnages.Personnage
  com.projet_warriors.personnages.Magicien o-- com.projet_warriors.armes.Sort : sort


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
